Invisible padding height fix

--- a/server-side/scoreboard-server/www/score_report.css
+++ b/server-side/scoreboard-server/www/score_report.css
@@ -147,7 +147,7 @@ p.description{
 
 #transparent_padding {
     visibility: hidden;
-    height: 100px;
+    height: 3.75em;
 }
 
 
